206-Kubernetes-Microservice-Phonebook-ucuncuDeneme/Solution/resultserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resultserver-deployment
  labels:
    app: resultserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resultserver
  template:
    metadata:
      labels:
        app: resultserver
    spec:
      containers:
      - name: resultserver
        image: aydintokuslu/phonebook_resultserver:5.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: resultserver-service
spec:
  type: NodePort
  selector:
    app: resultserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30002
