206-Kubernetes-Microservice-Phonebook-ucuncuDeneme/Solution/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver-service
                port: 
                  number: 80
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: resultserver-service
                port: 
                  number: 80
